# vfspp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  changelog.txt
examples/: CMakeLists.txt  example.cpp
examples/test-data/dlc1/: file.txt  file1.txt
examples/test-data/dlc2/: file.txt  file2.txt
examples/test-data/files/: test.txt
include/: CFileInfo.h  CMemoryFile.h  CMemoryFileSystem.h  CNativeFile.h  CNativeFileSystem.h  CVirtualFileSystem.h  CZipFile.h  CZipFileSystem.h  Global.h  IFile.h  IFileSystem.h  VFS.h
include/vfspp/: Alias.hpp  EntryInfo.hpp  FileInfo.hpp  FilesystemCompat.hpp  Global.h  IFile.h  IFileSystem.h  MemoryFile.hpp  MemoryFileSystem.hpp  NativeFile.hpp  NativeFileSystem.hpp  StringUtils.hpp  ThreadingPolicy.hpp  VFS.h  VirtualFileSystem.hpp  ZipFile.hpp  ZipFileSystem.hpp
src/: CFileInfo.cpp  CMemoryFile.cpp  CMemoryFileSystem.cpp  CNativeFile.cpp  CNativeFileSystem.cpp  CStringUtils.cpp  CStringUtils.h  CStringUtilsVFS.cpp  CVirtualFileSystem.cpp  CZipFile.cpp  CZipFileSystem.cpp  miniz.h
zlib/src/contrib/minizip/: iowin32.c  iowin32.h
